# face-analysis-sdk

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README  README.md
doc/: build.el  documentation.html  documentation.org  htmlize.el
doc/avatar-annotation.graffle/: data.plist  image2.tiff
doc/avatar-eyes-annotation.graffle/: data.plist  image1.tiff
src/: CSIROConfig.cmake
src/avatar/: Avatar.cpp  Avatar.hpp  CMakeLists.txt  Config.h.in  IO.hpp  myAvatar.cpp  myAvatar.hpp
src/change-pathnames/: CMakeLists.txt  main.cpp
src/create-avatar-model/: CMakeLists.txt  main.cpp
src/display-3d-points/: CMakeLists.txt  main.cpp
src/display-avatar/: CMakeLists.txt  main.cpp
src/display-tracking/: CMakeLists.txt  main.cpp
src/expression-transfer/: CMakeLists.txt  main.cpp
src/face-fit/: CMakeLists.txt  main.cpp
src/map-list/: CMakeLists.txt  main.cpp
src/qt-gui/: CMakeLists.txt  Configuration.plist  application-states.cpp  application-states.hpp  command-line-configuration.cpp  command-line-configuration.hpp  configuration.cpp  configuration.hpp  controllers.cpp  controllers.hpp  main.cpp  mangle-shared-library-locations.sh  osx-configuration.hpp  osx-configuration.mm  populate-resources.sh  qt-gui.pro
src/qt-gui/gui/: avatar-selection.cpp  avatar-selection.hpp  avatar.cpp  avatar.hpp  graphics-scrollbar.cpp  graphics-scrollbar.hpp  item-controllers.cpp  item-controllers.hpp  item-positions-calculator.cpp  item-positions-calculator.hpp  main-window.cpp  main-window.hpp  mesh-drawer.cpp  mesh-drawer.hpp  windowed-gui-controller.cpp  windowed-gui-controller.hpp  worker-thread.cpp  worker-thread.hpp
src/scripts/: CMakeLists.txt  create-movie-from-frames.in  extract-frames-from-movie.in  remove-rotation-metadata.in  rotate-movie.in
src/test/: CMakeLists.txt  add_avatar.cpp  command-line-options.cpp  command-line-options.hpp  command-line-options.tpp  speed_test.cpp  test_Avatar.cpp
src/tracker/: ATM.cpp  ATM.hpp  BasicDefines.hpp  CLM.cpp  CLM.hpp  CMakeLists.txt  Config.h.in  Detector.cpp  Detector.hpp  FCheck.cpp  FCheck.hpp  FDet.cpp  FDet.hpp  FaceTracker.cpp  FaceTracker.hpp  IO.cpp  IO.hpp  Patch.cpp  Patch.hpp  RegistrationCheck.cpp  RegistrationCheck.hpp  ShapeModel.cpp  ShapeModel.hpp  ShapePredictor.cpp  ShapePredictor.hpp  Warp.cpp  Warp.hpp  myFaceTracker.cpp  myFaceTracker.hpp
src/tracker/resources/: face.clm  face.fcheck  face.fdet  face.mytrackerparams  face.mytrackerparams.binary  face.pdm3d  face.sinit  face.tri
src/utils/: CMakeLists.txt  command-line-arguments.cpp  command-line-arguments.hpp  helpers.cpp  helpers.hpp  helpers.tpp  points.cpp  points.hpp
